cargo-features = ["profile-rustflags"]

[package]
name = "fan"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = true

[profile.dev]
rustflags = ["-Z", "sanitizer=address"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
base32 = "0.4.0"
base64 = "0.21.5"
dirs = "5.0.1"
libc = "0.2.150"


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.68.1"